Team Page file renaming and added segment component

--- a/app/app.core.scss
+++ b/app/app.core.scss
@@ -7,7 +7,7 @@
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
 
-@import "pages/getting-started/getting-started";
+@import "pages/team/team";
 
 @import "pages/grid/grid";
 
