--- a/app/pages/team/team.scss
+++ b/app/pages/team/team.scss
@@ -1,9 +1,18 @@
-.getting-started {
+.team {
 
   p {
     margin: 20px 0;
     line-height: 22px;
     font-size: 16px;
+  }
+
+  .flex-row {
+    flex-wrap: wrap;
+  }
+
+  .flex-row-col{
+    flex: none;
+    width: 33%;
   }
 
 }
